# biciFlask

./: .gitignore  README.md  pyproject.toml
src/: app.py
src/biciflask/: __init__.py  helpers.py  routes.py
src/biciflask/static/: main.js  styles.css
src/biciflask/templates/: base.html  cronometro.html  index.html  start.html  stop.html
