[tool.poetry]
name = "biciflask"
version = "0.1.0"
description = ""
authors = ["Felipe Lopez <felipe@nogson.com>"]
readme = "README.md"
packages = [{include = "biciflask", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
faker = "^22.2.0"
flask-jwt-extended = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
